--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-h5-audio-player": "^3.6.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
